fix: Efetuado os ajustes nas classes PastDueDateException, ReminderControllerTest, ReminderExceptionHandler, ReminderService e ReminderServiceTest.